--- a/src/shared/styles/global.scss
+++ b/src/shared/styles/global.scss
@@ -1,7 +1,4 @@
-@import './_breakpoints.scss';
-@import './_mixins.scss';
-@import './_variables.scss';
-@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-dynamic-subset.min.css');
+@use './_index' as *;
 
 html,
 body {
