:lipstick: Design: 전역 스타일링 일부 변경 (#1)

--- a/src/shared/styles/_variables.scss
+++ b/src/shared/styles/_variables.scss
@@ -14,3 +14,7 @@ $palette: (
   'gray-950': #070b13,
   'white': #ffffff,
 );
+
+@function palette($color) {
+  @return map-get($palette, $color);
+}
