:lipstick: Design: global 내 height 값 변경 (#1)

--- a/src/shared/styles/global.scss
+++ b/src/shared/styles/global.scss
@@ -2,7 +2,7 @@
 
 html,
 body {
-  height: 100vh;
+  min-height: 100vh;
   -webkit-tap-highlight-color: transparent;
   -webkit-font-smoothing: antialiased;
   font-family:
