:rotating_light: Fix: deprecated된 내용 변경 (#1)

--- a/src/features/news/components/NewsCard/NewsColumnCard/NewsColumnCard.module.scss
+++ b/src/features/news/components/NewsCard/NewsColumnCard/NewsColumnCard.module.scss
@@ -1,6 +1,6 @@
 // src/features/news/components/NewsCard/NewsColumnCard/NewsColumnCard.module.scss
 
-@use '@/shared/styles/index.scss' as *;
+@use '@/shared/styles/_functions.scss' as *;
 
 .newsColumnCardRoot {
   display: flex;
