--- a/src/shared/styles/_variables.scss
+++ b/src/shared/styles/_variables.scss
@@ -1,4 +1,4 @@
-// Color
+// Color Palette
 $palette: (
   'primary': #ffd939,
   'gray-50': #f8f9fb,
@@ -14,7 +14,3 @@ $palette: (
   'gray-950': #070b13,
   'white': #ffffff,
 );
-
-@function palette($color) {
-  @return map-get($palette, $color);
-}
