:sparkles: Feat: 버튼 컴포넌트 구현 (#3)

--- a/src/shared/styles/_variables.scss
+++ b/src/shared/styles/_variables.scss
@@ -17,6 +17,7 @@ $palette: (
   'gray-900': #121823,
   'gray-950': #070b13,
   'white': #ffffff,
+  'yellow-950': #3a1d0b,
 );
 
 @function palette($color) {
