--- a/src/features/news/components/NewsCard/NewsColumnCard/NewsColumnCard.module.scss
+++ b/src/features/news/components/NewsCard/NewsColumnCard/NewsColumnCard.module.scss
@@ -5,7 +5,7 @@
 .newsColumnCardRoot {
   display: flex;
   flex-direction: column;
-  gap: 12px;
+  gap: 8px;
 }
 
 .newsColumnCardThumb {
@@ -24,7 +24,7 @@
 .newsColumnCardContent {
   display: flex;
   flex-direction: column;
-  gap: 8px;
+  gap: 4px;
 }
 
 .newsColumnCardTitle {
@@ -39,6 +39,21 @@
   font-weight: 600;
   line-height: 160%;
   letter-spacing: 0.14px;
+}
+
+.newsColumnCardInfo {
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+  gap: 8px;
+
+  p {
+    color: palette('gray-400');
+    font-size: 10px;
+    font-weight: 500;
+    line-height: 160%;
+    letter-spacing: 0.12px;
+  }
 }
 
 .newsColumnCardLikes {
