:lipstick: Design: 뉴스 디테일 내용 스타일링 변경 (#3)

--- a/src/features/news/components/detail/DetailBody/DetailBody.module.scss
+++ b/src/features/news/components/detail/DetailBody/DetailBody.module.scss
@@ -21,3 +21,10 @@
   line-height: 140%;
   letter-spacing: 0.2px;
 }
+
+.newsDetailBodyContent {
+  white-space: normal;
+  text-align: justify;
+  line-height: 160%;
+  letter-spacing: 0.16px;
+}
