:sparkles: Feat: 디테일 페이지 내 댓글 기능 구현 (#3)

--- a/src/features/news/components/detail/DetailRelatedNews/DetailRelatedNews.module.scss
+++ b/src/features/news/components/detail/DetailRelatedNews/DetailRelatedNews.module.scss
@@ -1,5 +1,7 @@
 // src/features/news/components/detail/DetailRelatedNews/DetailRelatedNews.module.scss
 
+@use '@/shared/styles/_variables.scss' as *;
+
 .detailRelatedNews {
   display: flex;
   flex-direction: column;
