--- a/src/features/events/components/EventCardHorizontal/EventCardHorizontal.module.scss
+++ b/src/features/events/components/EventCardHorizontal/EventCardHorizontal.module.scss
@@ -3,7 +3,7 @@
 @use '@/shared/styles/variables.scss' as *;
 
 .root {
-  width: 150px;
+  width: 100%;
 }
 
 .eventCardRoot {
@@ -14,7 +14,7 @@
 }
 
 .eventCardThumb {
-  width: 150px;
+  width: 100%;
   height: 180px;
   border-radius: 12px;
   overflow: hidden;
