--- a/src/features/events/components/EventsList/EventsList.module.scss
+++ b/src/features/events/components/EventsList/EventsList.module.scss
@@ -1,7 +1,7 @@
 // src/features/events/components/EventsList/EventsList.module.scss
 
 .list {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 16px;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
 }
