:sparkles: Feat: 뉴스 디테일 내용 api 연결 (#6)

--- a/src/features/news/components/detail/DetailBody/DetailBody.module.scss
+++ b/src/features/news/components/detail/DetailBody/DetailBody.module.scss
@@ -35,6 +35,11 @@
   text-align: justify;
   line-height: 140%;
   letter-spacing: 0.16px;
+
+  img {
+    width: 100%;
+    display: block;
+  }
 }
 
 .newsDetailBodyHeader {
