:sparkles: Feat: 무한 스크롤 페이지 훅 구현 (#6)

--- a/src/features/events/components/EventCardHorizontal/EventCardHorizontal.module.scss
+++ b/src/features/events/components/EventCardHorizontal/EventCardHorizontal.module.scss
@@ -29,7 +29,8 @@
 .content {
   display: flex;
   flex-direction: column;
-  gap: 4px;
+  height: 60px;
+  justify-content: space-between;
 }
 
 .title {
