:sparkles: Feat: 관심사 및 지역 설정 (#9)

--- a/src/features/mypage/components/ProfileCard/ProfileCard.module.scss
+++ b/src/features/mypage/components/ProfileCard/ProfileCard.module.scss
@@ -132,7 +132,7 @@ $radius-sm: 8px;
   text-underline-offset: 3px;
 
   &:hover {
-    color: darken($ink, 8%);
+    color: palette('gray-900');
   }
   &:active {
     opacity: 0.9;
