--- a/src/pages/login/LoginPage.module.scss
+++ b/src/pages/login/LoginPage.module.scss
@@ -1,5 +1,5 @@
 .page {
-  min-height: calc(100dvh - 56px); 
+  min-height: calc(100dvh - 96px);
   display: flex;
   flex-direction: column;
   padding: 0px 16px;
@@ -34,34 +34,34 @@
 .btn {
   width: 100%;
   height: 52px;
-  border-radius: 16px;
+  border-radius: 8px;
   border: none;
   font-weight: 700;
   cursor: pointer;
 
   display: flex;
-  align-items: center;     
-  justify-content: center;  
-  gap: 10px;               
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
 
-  box-shadow: 0 6px 18px rgba(0,0,0,.06);
+  box-shadow: 0 6px 18px rgba(0, 0, 0, 0.06);
 }
 
 .btnKakao {
   @extend .btn;
-  background: #FEE500;
+  background: #fee500;
   color: #191600;
 }
 
 .btnNaver {
   @extend .btn;
-  background: #03C75A;
+  background: #03c75a;
   color: #fff;
 }
 
 .btnGoogle {
   @extend .btn;
-  background: #F6F6F6;
+  background: #f6f6f6;
   color: #1f1f1f;
   border: 1px solid #eeeeee;
   box-shadow: none;
@@ -70,5 +70,5 @@
 .icon {
   width: 20px;
   height: 20px;
-  display: block; 
+  display: block;
 }
